force-app/main/default/objects/DSALES_Cancelacion__c/DSALES_Cancelacion__c.object-meta.xml
<CustomObject>
    <label>Cancelación</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Número de Cancelación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancelaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>