force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_Canal__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSF</fullName>
            </value>
            <value>
                <fullName>.EXE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>