force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_Estatus__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Devuelto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>