force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_FechaCancelacion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_FechaCancelacion__c</fullName>
    <description>Campo para saber que fecha se cancelo la compra en Coppel</description>
    <label>Fecha de cancelación</label>
    <type>Date</type>
</CustomField>