force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_FolioCancelacion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_FolioCancelacion__c</fullName>
    <description>Campo para registrar el folio de cancelación</description>
    <label>Folio de cancelación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>