force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_Informaciondepago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Informaciondepago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar la cancelación a un pago</description>
    <label>Información de pago</label>
    <referenceTo>DSALES_InformacionDePago__c</referenceTo>
    <relationshipLabel>Cancelaciones</relationshipLabel>
    <relationshipName>Cancelaciones</relationshipName>
    <type>Lookup</type>
</CustomField>