force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_MotivoCancelacion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_MotivoCancelacion__c</fullName>
    <description>Campo para indicar cual fue el motivo de la cancelación</description>
    <label>Motivo de cancelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producto dañado</fullName>
            </value>
            <value>
                <fullName>Precio mas económico en otro establecimiento</fullName>
            </value>
            <value>
                <fullName>Demora de entrega</fullName>
            </value>
            <value>
                <fullName>A petición del cliente</fullName>
                <default>true</default>
                <label>A petición del cliente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>