force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_NombreVendedor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NombreVendedor__c</fullName>
    <description>Campo para identificar la persona quien realizo la cancelación</description>
    <label>Nombre del vendedor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>