force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_NumeroVendedor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NumeroVendedor__c</fullName>
    <description>Clave del vendedor</description>
    <label>Número de vendedor</label>
    <length>35</length>
    <type>Text</type>
</CustomField>