force-app/main/default/objects/DSALES_Cancelacion__c/fields/DSALES_Tienda__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para identificar que tienda esta solicitando la cancelación</description>
    <label>Tienda</label>
    <referenceTo>Tienda__c</referenceTo>
    <relationshipLabel>Cancelaciones</relationshipLabel>
    <relationshipName>Cancelaciones</relationshipName>
    <type>Lookup</type>
</CustomField>