force-app/main/default/objects/DSALES_Cancelacion__c/recordTypes/DSALES_RegistroCancelacionSM.recordType-meta.xml
<RecordType>
    <fullName>DSALES_RegistroCancelacionSM</fullName>
    <active>true</active>
    <description>Registro de cancelaciones para el procesos de SM</description>
    <label>Registro de cancelación de SM</label>
</RecordType>