force-app/main/default/objects/DSALES_Cancelacion__c/recordTypes/dsalesRegistroCancelacionSC.recordType-meta.xml
<RecordType>
    <fullName>dsalesRegistroCancelacionSC</fullName>
    <active>true</active>
    <description>tipo de registro de cancelación de seguro de celulares</description>
    <label>Registro de cancelación SC</label>
</RecordType>