force-app/main/default/objects/DSALES_Cancelacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Canal__c</columns>
    <columns>DSALES_Estatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DSALES_FolioCancelacion__c</columns>
    <columns>DSALES_Informaciondepago__c</columns>
    <columns>DSALES_MotivoCancelacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>